--- a/templates/receipts.html
+++ b/templates/receipts.html
@@ -18,12 +18,12 @@
         <div class="date-range">
           <div class="form-group-inline">
             <label for="start-date">📅 Start Date:</label>
-            <input type="date" id="start-date" name="start">
+            <input type="date" id="start-date" name="start_date">
           </div>
 
           <div class="form-group-inline">
             <label for="end-date">📅 End Date:</label>
-            <input type="date" id="end-date" name="end">
+            <input type="date" id="end-date" name="end_date">
           </div>
         </div>
 
@@ -58,17 +58,16 @@
         <table class="receipts-table">
           <thead>
             <tr>
-              <th>Date</th>
               <th>Location</th>
               <th>Total</th>
               <th>Category</th>
               <th>Items</th>
+              <th>Receipts Link</th>
             </tr>
           </thead>
           <tbody>
             {% for r in receipts %}
             <tr>
-              <td><span class="date-cell">{{ r.billDate }}</span></td>
               <td><span class="location-cell">{{ r.spendingLocation }}</span></td>
               <td><span class="total-cell">RM {{ "%.2f"|format(r.totalAmount) }}</span></td>
               <td><span class="category-cell">{{ r.category }}</span></td>
@@ -84,6 +83,13 @@
                   </li>
                   {% endfor %}
                 </ul>
+              </td>
+              <td>
+                {% if r.download_url %}
+                  <a href="{{ r.download_url }}" download class="download-link" target="_blank">⬇️ Download</a>
+                {% else %}
+                  <span class="location-cell">No File</span>
+                {% endif %}
               </td>
             </tr>
             {% endfor %}
